feat: add cancel reasons api (#36)
